# Kronon

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Add_later_CI_step_tests_with_coverage.yml  BACKLOG.md  Dockerfile  FEATURES.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/audit/: admin.py  apps.py  middleware.py  models.py  schemas.py  selectors.py  utils.py
apps/audit/api/: v1.py
apps/audit/api/v1/: audit.py
apps/audit/migrations/: 0001_initial.py
apps/clients/: admin.py  apps.py  guards.py  models.py  selectors.py  services.py  types.py
apps/clients/api/: v1.py
apps/clients/api/v1/: clients.py
apps/clients/migrations/: 0001_initial.py  0002_initial.py
apps/clients/models/: client.py  client_event.py
apps/clients/schemas/: __init__.py  client.py  contacts.py  filters.py  history.py
apps/common/: admin.py  auth.py  exceptions.py  managers.py  middleware.py  models.py  permissions.py  schemas.py  types.py  utils.py  validators.py
apps/common/management/commands/: add_trigram_dependency.py  fix_migrations.py
apps/common/migrations/: 0001_install_trigram.py
apps/common/utils/: audit.py  paths.py  request_initiator.py  security.py  unp.py
apps/users/: admin.py  apps.py  constants.py  guards.py  managers.py  models.py  schemas.py  selectors.py  services.py  signals.py
apps/users/api/v1/: directory.py  internal_hr.py
apps/users/management/commands/: init_superuser.py
apps/users/migrations/: 0001_initial.py  0002_create_system_user.py
apps/users/schemas/: directory.py  filters.py  hr.py  internal_hr.py
config/: __init__.py  api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/core/: logging.py  sentry.py
docker/: Dockerfile  entrypoint.sh
scripts/: clear_migrations.sh  entrypoint.sh
templates/admin/common/basemodel/: change_form.html
tests/: conftest.py  seed.py  test_smoke.py
tests/apps/audit/: test_admin_audit.py  test_clients_audit.py
tests/apps/clients/: test_api.py  test_audit.py  test_security.py
tests/apps/common/: test_auth.py  test_exceptions.py  test_managers.py
tests/apps/users/: test_directory_api.py  test_internal_hr_api.py
tests/utils/: base.py  factories.py  unp.py
